reduced width for interactive components

--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -247,7 +247,7 @@ function hasContent(html) {
             )}
             
             {hasInsightViz && (
-              <div class="viz-section-wrapper overflow-visible w-full">
+              <div class="viz-section-wrapper overflow-visible">
                 <div class="viz-row full-width-components mt-6 mb-8">
                   {insightVizComponents.length > 0 ? (
                     insightVizComponents.map((component, i) => (
@@ -295,7 +295,7 @@ function hasContent(html) {
             )}
             
             {hasTransformationViz && (
-              <div class="viz-section-wrapper overflow-visible w-full">
+              <div class="viz-section-wrapper overflow-visible">
                 <div class="viz-row full-width-components mt-6 mb-8">
                   {transformationVizComponents.length > 0 ? (
                     transformationVizComponents.map((component, i) => (
@@ -343,7 +343,7 @@ function hasContent(html) {
             )}
             
             {hasPredictionViz && (
-              <div class="viz-section-wrapper overflow-visible w-full">
+              <div class="viz-section-wrapper overflow-visible">
                 <div class="viz-row full-width-components mt-6 mb-8">
                   {predictionVizComponents.length > 0 ? (
                     predictionVizComponents.map((component, i) => (
@@ -391,7 +391,7 @@ function hasContent(html) {
             )}
             
             {hasConsensusViz && (
-              <div class="viz-section-wrapper overflow-visible w-full">
+              <div class="viz-section-wrapper overflow-visible">
                 <div class="viz-row full-width-components mt-6 mb-8">
                   {consensusVizComponents.length > 0 ? (
                     consensusVizComponents.map((component, i) => (
